--- a/theme/static/css/tuning.css
+++ b/theme/static/css/tuning.css
@@ -1,15 +1,42 @@
+a.logo {
+    font-size:18px;
+    color:#2e2e2e;
+    float:left;
+    margin:20px 0 0 25px;
+}
+
 .booking_status_1 {
-    background-color: #fd8d3c
+    background-color: #fa8564
 }
 
 .booking_status_3 {
-    background-color: #feb24c
+    background-color: #aec785
+}
+.booking_status_4 {
+    background-color: #1fb5ac
 }
 
 .booking_status_5 {
-    background-color: #fed976
+    background-color: #a48ad4
 }
 
 .booking_status_9 {
-    background-color: #ffffcc
+    background-color: #fdd752
 }
+
+.booking_status_1_icon:before  {
+  content: "\f067";
+}
+.booking_status_3_icon:before  {
+  content: "\f00c";
+}
+.booking_status_4_icon:before  {
+  content: "\f00c";
+}
+.booking_status_5_icon:before  {
+content: "\f06e";
+}
+.booking_status_9_icon:before  {
+  content: "\f154";
+}
+
