--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -3,8 +3,10 @@
 {% load bootstrap3 %}
 {% block extra_head %}
 
-    <link href="{{ STATIC_URL }}js/fullcalendar/fullcalendar.css" rel="stylesheet">
-
+{#    <link href="{{ STATIC_URL }}css/bootstrap-fullcalendar.css" rel="stylesheet">#}
+{#    <link href="{{ STATIC_URL }}css/calendar.css" rel="stylesheet">#}
+   <link href="{{ STATIC_URL }}js/fullcalendar/fullcalendar.css" rel="stylesheet">
+   <link href="{{ STATIC_URL }}css/calendar.css" rel="stylesheet">
 
     <style>
         .fc-header-title h2 {
