--- a/templates/web/booking_to_paid.html
+++ b/templates/web/booking_to_paid.html
@@ -20,19 +20,35 @@
         <div class="row">
 
 
-            <h1>Mark as Complete</h1>
+            <h1>Mark as Paid</h1>
             <div class="table-responsive">
-                <table id="bookings" class="table table-striped table-condensed">
+                <h3>Tuners for Payment</h3>
+                <table id="providers" class="table table-striped table-condensed">
                     <thead>
                     <tr>
                         <th>When</th>
                         <th>Who</th>
                         <th>Where</th>
                         <th>What</th>
+                        <th>Paid</th>
                         <th >Comments</th>
+                    </tr>
+                    </thead>
+                    <tbody>
 
+                    </tbody>
+                </table>
 
-
+                <h3>Payments from Clients</h3>
+                <table id="clients" class="table table-striped table-condensed">
+                    <thead>
+                    <tr>
+                        <th>When</th>
+                        <th>Who</th>
+                        <th>Where</th>
+                        <th>What</th>
+                        <th>Paid</th>
+                        <th >Comments</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -72,20 +88,20 @@
 
 
 
-            bookings_to_complete();
+            bookings_to_paid();
 
 
         }
 
 
 
-        function bookings_to_complete() {
+        function bookings_to_paid() {
 
 
 
             $.ajax({
                 type:"get",
-                url:API+"bookings_to_complete",
+                url:API+"bookings_to_paid",
                 data: {
                     limit:10},
                 dataType : 'json',
@@ -104,7 +120,7 @@
 
                         $.ajax({
                             type:"post",
-                            url:API+"booking_complete/",
+                            url:API+"booking_pay/",
                             data: {
                                 ref:ref,
                                 state: state},
@@ -122,15 +138,20 @@
         function bookings_table(json) {
             data = new Array();
                     $.each(json.objects, function(i,d) {
-                        d['togo'] = moment(d.when).fromNow()
+
                         d['when'] = moment(d.when).format('ddd Do MMM - HH:mm')
-                        d['done'] = '<input type="checkbox" class="switch" data-text-label="Tuned" data-on=null, data-off=success data-on-label="No" data-off-label="Yes" checked id="complete_' + d['ref'] + '" data-pk="' + d['ref'] +'">'
-                        d['comment'] = '<a href="#" class="comment"  data-pk="' + d['ref'] +'" data-value="">add comment</a>';
+                        d['pay_provider'] = '<input type="checkbox" class="provider_switch" data-text-label="Paid" data-on=null, data-off=success data-on-label="No" data-off-label="Yes" checked id="provider_' + d['ref'] + '" data-pk="' + d['ref'] +'">'
+                        d['pay_client'] = '<input type="checkbox" class="client_switch" data-text-label="Paid" data-on=null, data-off=success data-on-label="No" data-off-label="Yes" checked id="client_' + d['ref'] + '" data-pk="' + d['ref'] +'">'
+                        d['provider_comment'] = '<a href="#" class="provider_comment"  data-pk="' + d['ref'] +'" data-value="">add comment</a>';
+                        d['client_comment'] = '<a href="#" class="client_comment"  data-pk="' + d['ref'] +'" data-value="">add comment</a>';
                         data.push(d)
                     })
                     build_table(data,
-                            ["when", "tuner", "where", "what","done", "comment"],
-                            "#bookings");
+                            ["when", "tuner", "where", "what","pay_provider", "provider_comment"],
+                            "#providers");
+                    build_table(data,
+                            ["when", "tuner", "where", "what","pay_client", "client_comment"],
+                            "#clients");
 
 
                     $(".switch").bootstrapSwitch();  // make checkboxes in table into switches
